--- a/DingChat/LoginWindow.xaml
+++ b/DingChat/LoginWindow.xaml
@@ -1,12 +1,16 @@
-﻿<Window x:Class="com.leadingsoft.DingChat.LoginWindow"
+﻿<local:BaseWindow x:Class="com.leadingsoft.DingChat.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:com.leadingsoft.DingChat"
         mc:Ignorable="d"
-        Title="LoginWindow" Height="300" Width="300">
+        Title="LoginWindow" Height="300" Width="300" WindowStartupLocation="CenterScreen">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <Button>ddd</Button>
     </Grid>
-</Window>
+</local:BaseWindow>
