--- a/DingChat/MainWindow.xaml
+++ b/DingChat/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:com.leadingsoft.DingChat"
         mc:Ignorable="d"
-        Title="MainWindow" Height="300" Width="300">
+        Title="MainWindow" Height="300" Width="300" WindowStartupLocation="CenterScreen">
     <Grid>
-        
+        <Button Content="Button" HorizontalAlignment="Left" Margin="151,123,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+
     </Grid>
 </Window>
